--- a/.github/workflows/packages_creation.yml
+++ b/.github/workflows/packages_creation.yml
@@ -62,13 +62,14 @@ jobs:
         draft: false
         prerelease: false
 
-      - name: Upload Release Asset
-        id: upload-release-asset
-        uses: actions/upload-release-asset@v1
-        env:
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-        with:
-          upload_url: ${{ steps.create_release.outputs.upload_url }} # This pulls from the CREATE RELEASE step above, referencing it's ID to get its outputs object, which include a `upload_url`. See this blog post for more info: https://jasonet.co/posts/new-features-of-github-actions/#passing-data-to-future-steps
-          asset_path: ./iCub-common${{ env.ICUB_PACKAGE_VERSION }}-${{env.ICUB_DEBIAN_REVISION_NUMBER}.${{env.PLATFORM_RELEASE}}${{env.PLATFORM_HARDWARE}}.deb
-          asset_name: iCub-common${{ env.ICUB_PACKAGE_VERSION }}-${{env.ICUB_DEBIAN_REVISION_NUMBER}.${{env.PLATFORM_RELEASE}}${{env.PLATFORM_HARDWARE}}.deb
-          asset_content_type: application/octet-stream
+    - name: Upload Release Asset
+      if: github.event_name == 'tag'
+      id: upload-release-asset
+      uses: actions/upload-release-asset@v1
+      env:
+        GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+      with:
+        upload_url: ${{ steps.create_release.outputs.upload_url }} # This pulls from the CREATE RELEASE step above, referencing it's ID to get its outputs object, which include a `upload_url`. See this blog post for more info: https://jasonet.co/posts/new-features-of-github-actions/#passing-data-to-future-steps
+        asset_path: ./iCub-common${{ env.ICUB_PACKAGE_VERSION }}-${{env.ICUB_DEBIAN_REVISION_NUMBER}.${{env.PLATFORM_RELEASE}}${{env.PLATFORM_HARDWARE}}.deb
+        asset_name: iCub-common${{ env.ICUB_PACKAGE_VERSION }}-${{env.ICUB_DEBIAN_REVISION_NUMBER}.${{env.PLATFORM_RELEASE}}${{env.PLATFORM_HARDWARE}}.deb
+        asset_content_type: application/octet-stream
