--- a/.github/workflows/packages_creation.yml
+++ b/.github/workflows/packages_creation.yml
@@ -49,6 +49,7 @@ jobs:
         chmod +x ./.ci/create_icub-common_deb.sh
         export ICUB_PACKAGE_VERSION=$(echo ${{ steps.get_latest_tag.outputs.tag }} | sed 's/^v//' )
         ./.ci/create_icub-common_deb.sh
+        ls
 
     - name: Create Release
       if: github.event_name == 'tag'
@@ -70,6 +71,6 @@ jobs:
         GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
       with:
         upload_url: ${{ steps.create_release.outputs.upload_url }} # This pulls from the CREATE RELEASE step above, referencing it's ID to get its outputs object, which include a `upload_url`. See this blog post for more info: https://jasonet.co/posts/new-features-of-github-actions/#passing-data-to-future-steps
-        asset_path: ./iCub-common${{ env.ICUB_PACKAGE_VERSION }}-${{ env.ICUB_DEBIAN_REVISION_NUMBER }}.${{ env.PLATFORM_RELEASE }}${{ env.PLATFORM_HARDWARE }}.deb
-        asset_name: iCub-common${{ env.ICUB_PACKAGE_VERSION }}-${{ env.ICUB_DEBIAN_REVISION_NUMBER }}.${{ env.PLATFORM_RELEASE }}${{ env.PLATFORM_HARDWARE }}.deb
+        asset_path: ./iCub-common${{ env.ICUB_PACKAGE_VERSION }}-${{ env.ICUB_DEBIAN_REVISION_NUMBER }}.${{ env.PLATFORM_RELEASE }}_${{ env.PLATFORM_HARDWARE }}.deb
+        asset_name: iCub-common${{ env.ICUB_PACKAGE_VERSION }}-${{ env.ICUB_DEBIAN_REVISION_NUMBER }}.${{ env.PLATFORM_RELEASE }}_${{ env.PLATFORM_HARDWARE }}.deb
         asset_content_type: application/octet-stream
