--- a/.github/workflows/packages_creation.yml
+++ b/.github/workflows/packages_creation.yml
@@ -4,8 +4,8 @@ on:
   push:
     tags:
     - 'v*' # Push events to matching v*, i.e. v1.0, v20.15.10
-    branches:
-      - master
+#    branches:
+#      - master
 
 jobs:
 
@@ -51,7 +51,6 @@ jobs:
         ./.ci/create_icub-common_deb.sh
 
     - name: Create Release
-      if: github.event_name == 'tag'
       id: create_release
       uses: actions/create-release@v1
       env:
@@ -63,7 +62,6 @@ jobs:
         prerelease: false
 
     - name: Upload Release Asset
-      if: github.event_name == 'tag'
       id: upload-release-asset
       uses: actions/upload-release-asset@v1
       env:
