--- a/.github/workflows/packages_creation.yml
+++ b/.github/workflows/packages_creation.yml
@@ -10,7 +10,9 @@ on:
 jobs:
 
   create-release:
+    name: "Release"
     runs-on: ubuntu-latest
+    
     steps:
     - name: Create Release
       id: create_release
