--- a/.github/workflows/packages_creation.yml
+++ b/.github/workflows/packages_creation.yml
@@ -15,7 +15,7 @@ jobs:
       fail-fast: false
       matrix:
         build_type: [Release]
-        os: [ubuntu-focal, ubuntu-bionic]
+        os: [ubuntu-20.04, ubuntu-18.04]
     steps:
     - name: install deps
       shell: bash
