--- a/.github/workflows/packages_creation.yml
+++ b/.github/workflows/packages_creation.yml
@@ -16,6 +16,8 @@ jobs:
     steps:
     - uses: actions/checkout@master
 
+    - run: git fetch --prune --unshallow
+
     - name: Get Latest Tag
       id: get_latest_tag
       uses: WyriHaximus/github-action-get-previous-tag@0.2.0
