--- a/.github/workflows/packages_creation.yml
+++ b/.github/workflows/packages_creation.yml
@@ -64,15 +64,15 @@ jobs:
 
     - uses: actions/download-artifact@v2
       with:
-        name:  ICUB_PACKAGE_VERSION.txt
+        name: ICUB_PACKAGE_VERSION.txt
 
-    - name: Generate icub-common metapackage
-      shell: bash
-      run: |
-        chmod +x ./.ci/create_icub-common_deb.sh
-        export ICUB_PACKAGE_VERSION=$(cat ICUB_PACKAGE_VERSION.txt)
-        ./.ci/create_icub-common_deb.sh
-#        echo ::set-env name=ICUB_PACKAGE_NAME::$( echo $ICUB_PACKAGE_NAME )
+    # - name: Generate icub-common metapackage
+    #   shell: bash
+    #   run: |
+    #     chmod +x ./.ci/create_icub-common_deb.sh
+    #     export ICUB_PACKAGE_VERSION=$(cat ICUB_PACKAGE_VERSION.txt)
+    #     ./.ci/create_icub-common_deb.sh
+    #     echo ::set-env name=ICUB_PACKAGE_NAME::$( echo $ICUB_PACKAGE_NAME )
 
      - name: Upload Release Asset
         id: upload-release-asset
