--- a/.github/workflows/packages_creation.yml
+++ b/.github/workflows/packages_creation.yml
@@ -26,7 +26,7 @@ jobs:
       shell: bash
       run: |
         export ICUB_PACKAGE_VERSION=$( echo ${{ steps.get_latest_tag.outputs.tag }} | sed 's/^v//' )
-        echo $ICUB_PACKAGE_VERSION >> ICUB_PACKAGE_VERSION.txt
+        echo $ICUB_PACKAGE_VERSION > ICUB_PACKAGE_VERSION.txt
 
     - name: upload version file
       uses: actions/upload-artifact@v2
@@ -65,7 +65,6 @@ jobs:
     - uses: actions/download-artifact@v2
       with:
         name: ICUB_PACKAGE_VERSION.txt
-        path: ./ICUB_PACKAGE_VERSION.txt
 
     - name: Generate icub-common metapackage
       shell: bash
@@ -113,7 +112,6 @@ jobs:
     - uses: actions/download-artifact@v2
       with:
         name: ICUB_PACKAGE_VERSION.txt
-        path: ./ICUB_PACKAGE_VERSION.txt
 
     - name: Generate icub-common metapackage
       shell: bash
