--- a/.github/workflows/packages_creation.yml
+++ b/.github/workflows/packages_creation.yml
@@ -22,17 +22,17 @@ jobs:
       id: get_latest_tag
       uses: WyriHaximus/github-action-get-previous-tag@0.2.0
 
+    - name: upload version file
+      uses: actions/upload-artifact@v2
+      with:
+        name: UPLOAD_URL.txt
+        path: ./UPLOAD_URL.txt
+
     - name: create version file
       shell: bash
       run: |
         export ICUB_PACKAGE_VERSION=$( echo ${{ steps.get_latest_tag.outputs.tag }} | sed 's/^v//' )
         echo $ICUB_PACKAGE_VERSION > ICUB_PACKAGE_VERSION.txt
-
-    - name: upload version file
-      uses: actions/upload-artifact@v2
-      with:
-        name: ICUB_PACKAGE_VERSION.txt
-        path: ./ICUB_PACKAGE_VERSION.txt
 
     - name: Create Release
       id: create_release
@@ -44,6 +44,18 @@ jobs:
         release_name: Release ${{ github.ref }}
         draft: true
         prerelease: false
+
+    - name: create upload URL file
+      shell: bash
+      run: |
+      export UPLOAD_URL=$( echo ${{ steps.steps.create_release.outputs.upload_url }} )
+      echo $UPLOAD_URL > UPLOAD_URL.txtù
+
+    - name: upload version file
+      uses: actions/upload-artifact@v2
+      with:
+        name: ICUB_PACKAGE_VERSION.txt
+        path: ./ICUB_PACKAGE_VERSION.txt
 
 # end job "preliminary-steps"
 # start job "normal-build"
@@ -75,13 +87,22 @@ jobs:
         ./.ci/create_icub-common_deb.sh
         echo ::set-output name=ICUB_PACKAGE_NAME::$( echo $ICUB_PACKAGE_NAME )
 
+    - uses: actions/download-artifact@v2
+      with:
+        name: UPLOAD_URL.txt
+
+    - name: read upload url
+      id: read_upload_url
+      shell: bash
+      run: echo ::set-output name=UPLOAD_URL::$( echo $UPLOAD_URL )
+
     - name: Upload Release Asset
       id: upload-release-asset
       uses: actions/upload-release-asset@v1
       env:
         GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
       with:
-        upload_url: ${{ steps.create_release.outputs.upload_url }}
+        upload_url: ${{ steps.read_upload_url.outputs.UPLOAD_URL }}
         asset_path: ./${{ steps.package_generation.outputs.ICUB_PACKAGE_NAME }}
         asset_name: ${{ steps.package_generation.outputs.ICUB_PACKAGE_NAME }}
         asset_content_type: application/vnd.debian.binary-package
