--- a/.github/workflows/packages_creation.yml
+++ b/.github/workflows/packages_creation.yml
@@ -122,12 +122,13 @@ jobs:
     container:
       image: ${{ matrix.docker_image }}
     steps:
+      
     - name: install deps
       shell: bash
       run: |
-        apt update
-        apt install -y git
-        apt install -y lsb-release
+        sudo apt update
+        sudo apt install -y git
+        sudo apt install -y lsb-release
 
     - uses: actions/checkout@master
 
@@ -144,13 +145,22 @@ jobs:
         ./.ci/create_icub-common_deb.sh
         echo ::set-output name=ICUB_PACKAGE_NAME::$( echo $ICUB_PACKAGE_NAME )
 
+    - uses: actions/download-artifact@v2
+      with:
+        name: UPLOAD_URL.txt
+
+    - name: read upload url
+      id: read_upload_url
+      shell: bash
+      run: echo ::set-output name=UPLOAD_URL::$( cat $UPLOAD_URL.txt )
+
     - name: Upload Release Asset
       id: upload-release-asset
       uses: actions/upload-release-asset@v1
       env:
         GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
       with:
-        upload_url: ${{ steps.create_release.outputs.upload_url }}
+        upload_url: ${{ steps.read_upload_url.outputs.UPLOAD_URL }}
         asset_path: ./${{ steps.package_generation.outputs.ICUB_PACKAGE_NAME }}
         asset_name: ${{ steps.package_generation.outputs.ICUB_PACKAGE_NAME }}
         asset_content_type: application/vnd.debian.binary-package
