--- a/.github/workflows/packages_creation.yml
+++ b/.github/workflows/packages_creation.yml
@@ -93,7 +93,7 @@ jobs:
       id: read_upload_url
       shell: bash
       run: |
-        cat $UPLOAD_URL.txt
+        cat UPLOAD_URL.txt
         echo ::set-output name=UPLOAD_URL::$( cat UPLOAD_URL.txt )
 
     - name: Upload Release Asset
