--- a/.github/workflows/packages_creation.yml
+++ b/.github/workflows/packages_creation.yml
@@ -143,11 +143,19 @@ jobs:
         chmod +x ./.ci/create_icub-common_deb.sh
         export ICUB_PACKAGE_VERSION=$(cat ICUB_PACKAGE_VERSION.txt)
         ./.ci/create_icub-common_deb.sh
-        echo ""*****""
-        pwd
-        ls
-        echo "******"
         echo ::set-output name=ICUB_PACKAGE_NAME::$( cat ICUB_PACKAGE_NAME.txt )
+
+    - name: upload NAME file
+      uses: actions/upload-artifact@v2
+      with:
+        name: ICUB_PACKAGE_NAME.txt
+        path: ./ICUB_PACKAGE_NAME.txt
+
+    - name: test
+      shell: bash
+      run: |
+        echo "upload URL: ${{ steps.read_upload_url.outputs.UPLOAD_URL }}"
+        echo "package name: ${{ steps.package_generation.outputs.ICUB_PACKAGE_NAME }}"
 
     - uses: actions/download-artifact@v2
       with:
