--- a/.github/workflows/packages_creation.yml
+++ b/.github/workflows/packages_creation.yml
@@ -98,15 +98,11 @@ jobs:
 
     - name: Upload Release Asset
       id: upload-release-asset
-      uses: actions/upload-release-asset@v1
-      env:
-        GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+      uses: shogo82148/actions-upload-release-asset@v1
       with:
         upload_url: ${{ steps.read_upload_url.outputs.UPLOAD_URL }}
-        asset_path: ./${{ steps.package_generation.outputs.ICUB_PACKAGE_NAME }}
-        asset_name: ${{ steps.package_generation.outputs.ICUB_PACKAGE_NAME }}
-        asset_content_type: application/vnd.debian.binary-package
-
+        asset_path: ${{ steps.package_generation.outputs.ICUB_PACKAGE_NAME }}
+        
 # end job "normal-build"
 # start job "docker-build"
   docker-build:
