--- a/.github/workflows/packages_creation.yml
+++ b/.github/workflows/packages_creation.yml
@@ -66,9 +66,9 @@ jobs:
     - name: install deps
       shell: bash
       run: |
-        sudo apt update
-        sudo apt install -y git
-        sudo apt install -y lsb-release
+        sudo apt-get update
+        sudo apt-get install -y git
+        sudo apt-get install -y lsb-release
 
     - uses: actions/checkout@master
 
@@ -102,7 +102,8 @@ jobs:
       with:
         upload_url: ${{ steps.read_upload_url.outputs.UPLOAD_URL }}
         asset_path: ${{ steps.package_generation.outputs.ICUB_PACKAGE_NAME }}
-        
+        asset_content_type: application/vnd.debian.binary-package
+
 # end job "normal-build"
 # start job "docker-build"
   docker-build:
@@ -122,9 +123,9 @@ jobs:
     - name: install deps
       shell: bash
       run: |
-        sudo apt update
-        sudo apt install -y git
-        sudo apt install -y lsb-release
+        apt-get update
+        apt-get install -y git
+        apt-get install -y lsb-release
 
     - uses: actions/checkout@master
 
@@ -152,13 +153,10 @@ jobs:
 
     - name: Upload Release Asset
       id: upload-release-asset
-      uses: actions/upload-release-asset@v1
-      env:
-        GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+      uses: shogo82148/actions-upload-release-asset@v1
       with:
         upload_url: ${{ steps.read_upload_url.outputs.UPLOAD_URL }}
-        asset_path: ./${{ steps.package_generation.outputs.ICUB_PACKAGE_NAME }}
-        asset_name: ${{ steps.package_generation.outputs.ICUB_PACKAGE_NAME }}
+        asset_path: ${{ steps.package_generation.outputs.ICUB_PACKAGE_NAME }}
         asset_content_type: application/vnd.debian.binary-package
 
 # end job "docker-build"
